--- a/backstage/catalog-info.yaml
+++ b/backstage/catalog-info.yaml
@@ -3,6 +3,8 @@ kind: Component
 metadata:
   name: mood-analyzer
   description: Mood analyzer
+  annotations:
+    'backstage.io/kubernetes-label-selector': 'app.kubernetes.io/part-of=mood-analyzer'
 spec:
   type: service
   lifecycle: integration
